# PartSeg-NeuroPAL

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
src/partseg_neuropal/: napari.yml
src/partseg_neuropal/napari_plugins/: __init__.py  combine_channels.py
tests/: __init__.py
